font issue on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@ a:hover{
 	background-color: rgba(0,255,0,1);	
 }
 #items {
-	font-family: "Comic Sans MS", cursive;
-	text-transform: lowercase;	
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	text-transform: lowercase;
 }
 
